[package]
name = "test-rust-fuser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.1"
libc = "0.2.51"

# [dev-dependencies]
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo"] }

bincode = "1.3.1"
serde = { version = "1.0.102", features = ["std", "derive"] }
log = "0.4.6"
